--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-05  Peter O'Gorman  <peter@pogma.com>
+
+	* config/ltmain.m4sh [darwin]: Make the -dylib_file flag work on
+	older darwins too. Reported by Christoph Egger.
+
 2004-10-04  Gary V. Vaughan  <gary@gnu.org>
 
 	* m4/libtool.m4 (_LT_PROG_ECHO_BACKSLASH): Don't confuse $ECHO
