* AUTHORS: Add myself.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>.  Co-maintainer.
 Peter O'Gorman <peter@pogma.com>. Co-maintainer.
 Scott James Remnant <scott@netsplit.com>.  Co-maintainer.
+Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.  Co-maintainer.
