--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-10-08  Gary V. Vaughan  <gary@gnu.org>
+
+	Fix some issues that mangled the reexecution path to a script,
+	and thus prevented it from finding itself:
+
+	* config/general.m4sh (progname): Don't actually change the name
+	of the script if it begins with a `-', just prepend `./'.
+	(progpath): Add a new clause that first searches the execution
+	PATH, and then finally assumes this script is in the current
+	working directory if $progname has no directory separators (e.g
+	when invoked as `$SHELL progname').
+
 2004-10-08  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/ltdl.c (lt_dlexit, lt_dlpath_insertdir): Fix memleaks,
