--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-10-08  Gary V. Vaughan  <gary@gnu.org>
 
+	Update to the latest commit and mailnotify scripts from
+	gary@gnu.org--2004/cvs-utils--tla--1.0:
+
+	* commit, config/mailnotify: Removed.  Now built from...
+	* clcommit.m4sh, config/mailnotify.m4sh: ...these new sources.
+	* Makefile.maint (commit, config/mailnotify): How to build them.
+	* bootstrap: If we have a checked out tree (i.e. clcommit.m4sh
+	is present), then build them.
+
+2004-10-08  Gary V. Vaughan  <gary@gnu.org>
+
 	Fix some issues that mangled the reexecution path to a script,
 	and thus prevented it from finding itself:
 
