--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-10-11  Charles Wilson  <spam.protected>
+
+	* tests/link.test: Fix check for use of libnlsut.a under
+	Cygwin.
+
+2004-10-11  Noah Misch  <noah@cs.caltech.edu>
+
+	* tests/quote.test: Do not look for $preargs in the output,
+	because libtool may change them.
+
 2004-10-10  Charles Wilson  <spam.protected>
 
 	* config/ltmain.m4sh: Really don't require versions of GNU 
