--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-10-13  Charles Wilson  <spam.protected>
+
+	* config/ltmain.m4sh: add foo/bin for every foo/lib 
+	in dllsearchpath when creating wrapper script.  Fixes
+	depdemo-relink test failure.
+
+2004-10-12  Charles Wilson  <spam.protected>
+
+	* config/ltmain.m4sh (func_mode_link): don't relink
+	on cygwin/mingw; no need.  But do ensure that wrappers
+	are created unless doing a purely static build.
+
 2004-10-13  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/tagdemo-undef.test: New test for hosts that allow shared
