--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 2.1b: 2005-??-??; CVS version 2.1a, Libtool team:
+* New tests for support of Automake subdir-objects.
+
 New in 1.9f: 2004-??-??; CVS version 1.9e, Libtool team:
 * Fix a regression in 1.9d, where ECHO was always set to 'echo' and the
   backslash quoting tests were never run.
