--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-16  Gary V. Vaughan  <gary@gnu.org>
 
+	* config/ltmain.m4sh (func_mode_finish): solaris-2.6 also has
+	crle(1).
+	Reported by Albert Chin-A-Young <china@thewrittenword.com>
+
+2004-10-16  Gary V. Vaughan  <gary@gnu.org>
+
 	Add some new tests for Libtool's support of Automake
 	subdir-objects builds.  This marks the beginning of a move to an
 	Autotest driven test framework, which will eventually allow us to
