--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-22  Gary V. Vaughan  <gary@gnu.org>
+
+	* clcommit.m4sh: Updated again, to support file list limited
+	commits to CVS, and to fix another occurence of the bash bug
+	that was preventing non-tla users from sending a commit mail.
+
 2004-10-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* Makefile.maint: Fix typo.
