--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-23  Gary V. Vaughan  <gary@gnu.org>
+
+	GNU libtool 1.9f was released.
+
+	* configure.ac: Bumped version to 1.9f.
+	* NEWS: Updated.
+
 2004-10-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* clcommit.m4sh: Add --rcfile option.
