--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-24  Gary V. Vaughan  <gary@gnu.org>
+
+	* Makefile.maint (cvs-dist): Generate signatures and directives
+	for bz2 upload.
+
 2004-10-23  Gary V. Vaughan  <gary@gnu.org>
 
 	* configure.ac: Bumped version to 1.9g.
