--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-28  Patrick Welche <prlw1@newn.cam.ac.uk>,
+	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am, Makefile.maint, tests/Makefile.am: Use path for
+	dependencies built in the source tree, to cater for BSD make.
+
 2004-10-24  Gary V. Vaughan  <gary@gnu.org>
 
 	* HACKING: Fix a typo in the gpg --verify instructions.
