--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-10-30  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/ltdl.c (loader_init_callback): Back out broken cast.
+
 	* libltdl/ltdl.c (loader_init_callback, lt_dlexit): Add casts to
 	target type.
 
